fix : 엔티티의 잘못된 구현 수정
- equals and hashcode의 잘못된 구현
- set으로 persist 되지 않은 엔티티 추가시 동작하지 않는 구현

수정했습니다